getting image from HDFS and displaying on UI - Done

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -12,6 +12,10 @@
             <input type="file" name="file" id="file"/>
             <input type="button" class="btn btn-primary" value="upload" onclick="upload()"/>
         </form>
+        <div>
+            <img src="/file/getImage?imageName=IMG_20151002_125730351_HDR.jpg">
+            
+        </div>
     </div>
     <script src="scripts/main.js"></script>
 </body>
